--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
     "qunit": "~1.18.0"
   },
   "devDependencies": {
-    "bootstrap-datepicker": "~1.4.0"
+    "bootstrap-datepicker": "https://github.com/abodo-dev/bootstrap-datepicker.git#dropdown-menu-style"
   }
 }
