--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "https://github.com/soulim/ember-cli-bootstrap-datepicker",
+  "repository": "https://github.com/abodo-dev/ember-cli-bootstrap-datepicker.git#dropdown-menu-style",
   "engines": {
     "node": ">= 0.10.0"
   },
